kubernetes/main/apps/observability/glance/app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: glance
  labels:
    pod-security.kubernetes.io/audit: privileged 
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/warn: privileged
    kustomize.toolkit.fluxcd.io/prune: disabled
    goldilocks.fairwinds.com/enabled: "true"
